...
        "pay": [{
            "heading": "Payroll",
            "description": "HRMS payroll provides every possible option for allocation of employeeshare of PF or ESI all at one place.",
             "imgpay":"assets/images/payroll.png"
        }],
        "inventory": [{
            "heading": "Inventory",
            "description": "Track every item or batch in your inventory with serial number.ALways keep a track on movement of items,in a single inventory management.",
             "imginventory":"assets/images/inventory.png"
        }],
        "leave": [{
            "heading": "Leave Management",
            "description": "Customization leave  management system of your own.Approve multiple  request and manage applications with effective leave management.",
...
