...
                )),
          ],
        ),
        Container(
          margin: EdgeInsets.fromLTRB(16, 0, 16, 0),
          child: TextFormField(
            key: Key('updatePassword'),
            controller: password,
            decoration: InputDecoration(
              border: OutlineInputBorder(),
              errorText: userNameValidate ? "Password can't be blank" : null,
            ),
          ),
        ),
        Row(
          mainAxisAlignment: MainAxisAlignment.end,
          children: [
            Container(
              key: Key('update'),
              margin: EdgeInsets.fromLTRB(16, 16, 16, 8),
              child: RoundedLoadingButton(
                color: AppColors.BTN_BLACK_COLOR,
                width: 150,
                borderRadius: 10,
                child: Text('Update Password',
...
