...
                  margin: EdgeInsets.fromLTRB(32, 8, 32, 16),
                  child: RaisedButton(
                    textColor: Colors.white,
                    color: Color(0xff4C545B),
                    shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.all(Radius.circular(5.0))),
                    child: Text('Login'),
                    onPressed: () {
                      print(nameController.text);
                      print(passwordController.text);
                    },
                  ),
                ),
...
